# DocuRAG-Intelligent-PDF-Question-Answering-System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: dependencies.py  main.py  routes.py  schemas.py
app/config/: settings.py
app/evaluation/: __init__.py  evaluator.py
app/generation/: __init__.py  pipeline.py
app/ingestion/: __init__.py  chunker.py  loader.py
app/retrieval/: __init__.py  embeddings.py  retriever.py  vector_store.py
data/text_files/: rag_intro.txt
frontend/: app.py
notebook/: pdf_loader.ipynb
notebooks/: phase1_pdf_loader.ipynb
sample_data/: README.md
tests/: test_generation.py  test_ingestion.py  test_retrieval.py
