[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docurag"
version = "1.0.0"
description = "Production-grade Retrieval-Augmented Generation for PDF documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core RAG
    "langchain-text-splitters>=0.3",
    "pymupdf>=1.24",
    "sentence-transformers>=3.0",
    "openai>=1.30",

    # Vector stores
    "chromadb>=0.5",
    "faiss-cpu>=1.8",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Frontend
    "streamlit>=1.35",
    "requests>=2.31",

    # Utilities
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
docurag-api = "app.api.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
